Fix header spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,13 +11,6 @@ TODO: Get rid of all unwanted things
   /*border: 1px solid red;*/
 }
 
-.this {
-  border: 1px solid red;
-}
-.that {
-  border: 1px solid green;
-}
-
 html, body {
   /*background-color: #000000;*/
   /*color: rosybrown; #or darkSalmon*/
@@ -57,9 +50,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .body {
-  padding: 0.25em;
+  /*padding: 0.25em;*/
   width: 100%;
-  border: 1px solid red;
+}
+
+.header, .me, .portfolio, .footer {
+  width: 100%;
+  /*border: 1px solid orange;*/
+  padding: 0 0.5em;
 }
 
 /*
@@ -67,21 +65,22 @@ h1, h2, h3, h4, h5, h6 {
  */
 
 .header {
-  display: inline-flex;
-  justify-content: space-around;
-  align-items: center;
+  display: flex;
+  /*justify-content: space-around;*/
+  /*align-items: center;*/
   max-height: 150px;
-  /*border: 1px solid orange;*/
-  width: 100%;
 }
 
 .logo, .name {
   /*border: 1px solid blue;*/
   flex: 1 1 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .name {
-  text-align: center;
+  text-align: right;
   /*width: 100%;*/
   /*padding-right: 0.5em;*/
 }
@@ -94,11 +93,16 @@ h1, h2, h3, h4, h5, h6 {
   /*padding: 0 0.25em;*/
 }
 
-.name > * {
+.name > h1, .name > h4 {
   /*border: 1px solid green;*/
-  margin: 0.25em 0;
-  /*padding: 0 0.25em;*/
-  width: 100%;
+  /*margin: 0.25em 0;*/
+  margin: 0;
+  padding: 0 0.5em;
+  /*width: 100%;*/
+}
+
+.name > h4 {
+  text-align: center;
 }
 
 /*
@@ -131,7 +135,6 @@ h1, h2, h3, h4, h5, h6 {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
- /*border: 1px solid orange;*/
 }
 
 /* flex items  */
@@ -152,10 +155,6 @@ h1, h2, h3, h4, h5, h6 {
   /*height: 170px;*/
 }
 
-/*.project > * {
-  border: 1px solid orange;
-}*/
-
 
 /*
  * Footer
@@ -163,11 +162,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .footer {
   border-top: 1px solid lavender;
-  /*border: 1px solid red;*/
   padding: 1em;
-  /*border: 1px solid green;*/
-  /*width: 50%;*/
-  margin: 1em auto;
+  margin: 0 auto;
   display: flex;
   justify-content: space-around;
 }
